# SDGP-Project-SoliasART-

./: .gitignore  README.md  backend_commits.txt  package-lock.json  package.json  requirements.txt
backend/: .env  add_collection_fk.py  db_audit.txt  diag.py  diag_output.txt  diagnose.txt  err.txt  inspect_db.py  main.py  pyproject.toml  requirements.txt  seed_db.py  server_log.txt  test_schemas.py  verify_fk.py  verify_imports.py
backend/app/: main.py
backend/app/core/: config.py  database.py  image_kit.py  payhere.py  supabase.py
backend/app/modules/AR/: ar_model.py  mesh_utils.py  router.py  test_ar.py
backend/app/modules/Art-upload/: model.py  router.py
backend/app/modules/ArtSearch/: router.py
backend/app/modules/ArtUpload/: artwork.py  embeddings.py  form.py  image_kit.py  model.py  router.py  schemas.py
backend/app/modules/ArtistDashbooard/: router.py
backend/app/modules/ArtistOnboarding/: form.py  model.py  router.py  schemas.py
backend/app/modules/ArtistProfile/: model.py  router.py  schemas.py
backend/app/modules/Artwork/: model.py  router.py  schemas.py
backend/app/modules/Collection/: model.py  router.py  schemas.py
backend/app/modules/Commission/: model.py  router.py  schemas.py  utils.py
backend/app/modules/Feed/: ml_ranker.py  model.py  router.py  schemas.py
backend/app/modules/PayHere/: models.py  router.py  schemas.py
backend/app/tests/: test_ar.py  test_auth.py  test_cart.py  test_feed.py
backend/storage/models/: 27f7174e-8bff-4a6a-a257-d32d7e36d8e0.glb  a7298905-2923-41d6-9021-4fd6d2aeb82a.glb
frontend/: .env  (+3 more)
(+119 files in other folders)
