[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.0",
    "numpy>=2.4.1",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=12.1.0",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.21",
    "scipy>=1.17.0",
    "supabase>=2.27.2",
    "trimesh>=4.11.1",
    "uvicorn[standard]>=0.40.0",
]
